# IR-project

./: DOCS_HTTP_DIF_20x.TXT  FORMATOS.TXT  FORMATOS.TXT~  SELECAO_DOCUMENTOS.TXT  SELECAO_DOCUMENTOS.TXT~
Indexer/: .cproject  .project  tempFile.tmp  tempIndex.tmp  tempIndexSorted.tmp  triples.tmp
Indexer/Debug/: Indexer  makefile  objects.mk
Indexer/Debug/src/: Indexer.d  main.d  subdir.mk
Indexer/include/: HTML_Parser.h  Indexer.h  QueryProcessor.h  Util.h
Indexer/riCode_old/: CMakeCache.txt  cmake_install.cmake
Indexer/riCode_old/src/: CollectionReader.cpp  Makefile  cmake_install.cmake  envDefault.h
Indexer/riCode_old/test/: ircpReader  testWriter.cpp
Indexer/src/: #Indexer.cpp#  HTML_Parser.cpp  Indexer.cpp  QueryProcessor.cpp  Util.cpp  main.cpp
Indexing/: .cproject  .project  charsets.txt
Indexing/Debug/: Indexing  makefile  objects.mk
Indexing/Debug/src/: Indexer.d  main.d  subdir.mk
Indexing/Release/: Indexing
Indexing/Release/src/: subdir.mk
Indexing/include/: Indexer.h
Indexing/src/: Indexer.cpp  main.cpp
riCode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
riCode/src/: CollectionReader.cpp  CollectionReader.cpp~  CollectionReader.h~  CollectionWriter.h~  Document.cpp  Makefile  cmake_install.cmake
riCode/test/: Makefile  cmake_install.cmake  ircpReader
riCode_old/: Makefile
riCode_old/src/: CollectionReader.h  CollectionReader.h~  CollectionWriter.cpp  CollectionWriter.cpp~  Document.h
riCode_old/test/: CMakeLists.txt  cmake_install.cmake  ircpWriter  testReader.cpp  testReader.cpp~
(+12 files in other folders)
